--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@ body {
   background: #d3f9b5;
   font-family: "Fredoka", sans-serif;
 }
+header {
+  border-bottom: 1px solid #f0f7ea;
+  padding: 0 0 30px 0;
+}
 .weather-app {
   background: white;
   max-width: 600px;
@@ -9,4 +13,37 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.09);
   border-radius: 16px;
   padding: 30px;
+}
+.search-form {
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+}
+.search-form-input {
+  background: #f0f7ea;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  padding: 15px 20px;
+  font-size: 16px;
+}
+.search-form-button {
+  background: #d3f9b5;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 6px;
+  margin-left: 6px;
+}
+footer {
+  border-top: 1px solid #f0f7ea;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.6);
+}
+a {
+  font-family: "Quicksand", sans-serif;
+  color: #657756;
+  font-weight: bold;
 }
