updated some colors

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ header {
 }
 .search-form-button {
   background: #d3f9b5;
+  color: #657765;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
