--- a/src/style.css
+++ b/src/style.css
@@ -36,9 +36,43 @@ header {
   border-radius: 6px;
   margin-left: 6px;
 }
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+.weather-app-city {
+  margin: 0;
+  font-size: 42px;
+}
+.weather-app-details {
+  font-size: 18px;
+  line-height: 20px;
+}
+.weather-app-details strong {
+  color: #ff677d;
+}
+.temp-emoji {
+  position: relative;
+  top: -3px;
+  font-size: 60px;
+  margin-right: 15px;
+}
+.temp-main {
+  font-size: 80px;
+}
+.temp-unit {
+  font-size: 28px;
+  position: relative;
+  top: -36px;
+}
+
+main {
+  padding: 30px 0;
+}
+
 footer {
   border-top: 1px solid #f0f7ea;
-  padding: 30px 0 0 0;
+  padding: 15px 0 0 0;
   text-align: center;
   font-size: 13px;
   color: rgba(0, 0, 0, 0.6);
