--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ main {
   color: #ff677d;
 }
 .large-temperature-display {
-  diaplay: flex;
+  display: flex;
   align-items: baseline;
   gap: 0.35em;
   white-space: nowrap;
@@ -65,7 +65,6 @@ main {
   position: relative;
   top: -7px;
   font-size: 50px;
-  margin-right: 10px;
 }
 .temp-main {
   font-size: 80px;
