trying the nowrap on the weather app details strong, i feel like i need to make a class fo this to work, but we'll see hahah

--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,7 @@ main {
 .weather-app-details strong {
   color: #ff677d;
   align-items: baseline;
+  white-space: nowrap;
 }
 .large-temperature-display {
   display: flex;
